// Proto definition for AggSender service

syntax = "proto3";
package types;
option go_package = "github.com/agglayer/aggkit/aggsender/types";

message ProofRequest {
  string identifier = 1;
  string proof = 2;
}

message ProofResponse {
  string error = 1;
}

service AggSender {
    rpc Proof (ProofRequest) returns (ProofResponse) {}
}
