syntax = "proto3";
package proto;
option go_package = "github.com/agglayer/aggkit/aggsender/types";

// FixedBytes65 type.
message FixedBytes65 {
  // bytes representation of the bytearray.
  bytes value = 1;
}

// FixedBytes32 type.
message FixedBytes32 {
  // bytes representation of the bytearray.
  bytes value = 1;
}

// FixedBytes20 type.
message FixedBytes20 {
  // bytes representation of the bytearray.
  bytes value = 1;
}
